update Cinema 18/10